[package]
name = "mandelbrot-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11.0"
log = "0.4.19"
num = "0.4.1"
pixels = "0.13.0"
rayon = "1.7.0"
winit = "0.28.6"
winit_input_helper = "0.14.1"
